--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name":"ANYWAY-MD-V1",
-  "description":"Best whatsapp bot developed by mr anyway ",
+  "name":"ZOMBIE-MD",
+  "description":"Best whatsapp bot developed by Zombie and Gaga ",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://i.imgur.com/G5u9emw.jpeg",
-  "repository":"https://github.com/SIMON32883/MR-ANYWAY-MD",
+  "logo":"https://files.catbox.moe/k7wq3r.jpg",
+  "repository":"https://github.com/Zombie-Zombie/ZOMBIE-MD",
   "succes_url":"/",
   "stack":"container",
   "env":{
@@ -47,14 +47,14 @@
     "BOT_NAME" : {
        
       "description":"put A name for your bot",
-      "value":"-ANYWAY-MD",
+      "value":"ZOMBIE-MD",
       "required":false
 
     } ,
      "BOT_MENU_LINKS" : {
     
       "description":"add one or many link for your bot menu  ; eg : url1,url2,url3.....",
-      "value":"https://i.imgur.com/G5u9emw.jpeg",
+      "value":"https://files.catbox.moe/k7wq3r.jpg",
       "required":false
        
      },
@@ -86,14 +86,14 @@
     
     "desc": "Your Name",
     "required": false,
-    "value": "Mr Anyway"
+    "value": "MR ZOMBIE"
   },
     "NUMERO_OWNER":
   {
     
     "desc": "Your number , dont put '+' and put you area code(exemple of togo '228')",
     "required":false,
-    "value": "255678892560"
+    "value": "254112291443"
   },
     "WARN_COUNT":
   {
