--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name":"ZOMBIE-MD",
   "description":"Best whatsapp bot developed by Zombie and Gaga ",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://files.catbox.moe/k7wq3r.jpg",
+  "logo":"https://files.catbox.moe/c8dlrq.jpg",
   "repository":"https://github.com/Zombie-Zombie/ZOMBIE-MD",
   "succes_url":"/",
   "stack":"container",
